# prisma-client-py-repro

./: .gitignore  README.md  project.code-workspace  pyproject.toml
prisma/: schema.prisma
prisma_repro/: consumer.py  generate_partials.py  generate_partials_patch.py
